/names: fixed colors rather than opacity @ cloud + gradient overflow for bigger names

--- a/css/names.css
+++ b/css/names.css
@@ -49,19 +49,37 @@
     list-style-type: none;
     display: inline-block;
     margin: 5px;
-    border: 1px solid #3395c8;
-    color: #3395c8;
+    border: 1px solid #c2dfef;
+    color: #c2dfef;
     font-weight: bold;
     border-radius: 3px;
     text-align: center;
     cursor: pointer;
     font-weight: normal;
-    opacity: .3;
+    overflow: hidden;
+    position: relative;
 }
 @media screen and (max-width: 770px) {
     #recentnames > ul > li {
         margin: 2px;
     }
+}
+
+#recentnames > ul > li:after {
+    content: '\00a0';
+    width: 2em;
+    height: 1.5em;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1)));
+    background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+    background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+    background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+    background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 );    
 }
 
 /*
@@ -162,24 +180,27 @@
 }
 
 /*
- * Names cloud: opacity
+ * Names cloud: colors;
  */
 #recentnames > ul > li:nth-child(12) {
-    opacity: 1;
+    color: #3395c8;
+    border-color: #3395c8;
 }
 
 #recentnames > ul > li:nth-child(7),
 #recentnames > ul > li:nth-child(11),
 #recentnames > ul > li:nth-child(13),
 #recentnames > ul > li:nth-child(16) {
-    opacity: .7;
+    color: #70b5d8;
+    border-color: #70b5d8;
 }
 
 #recentnames > ul > li:nth-child(6),
 #recentnames > ul > li:nth-child(8),
 #recentnames > ul > li:nth-child(19),
 #recentnames > ul > li:nth-child(20) {
-    opacity: .5;
+    color: #99cae3;
+    border-color: #99cae3;
 }
 
 /*
